--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
-    "name": "partdb",
-    "private": true,
-    "version": "1.0.0",
-    "main": "main.js",
-    "scripts": {
-      "dev": "cd client && npm run dev",
-      "electron": "electron .",
-      "start": "concurrently \"npm run dev\" \"npm run electron\"",
-      "build-client": "cd client && npm run build",
-      "build": "npm run build-client && electron-builder"
-    },
-    "build": {
-      "appId": "com.partdb.app",
-      "productName": "PartDB",
-      "files": [
-        "dist/",
-        "main.js",
-        "preload.js",
-        "node_modules/"
-      ],
-      "directories": {
-        "buildResources": "assets"
-      },
-      "win": {
-        "target": "nsis"
-      }
-    },
-    "devDependencies": {
-      "concurrently": "^8.2.0",
-      "electron": "^29.0.0",
-      "electron-builder": "^24.6.0"
-    }
+  "name": "partdb",
+  "version": "1.0.0",
+  "main": "main.js",
+  "scripts": {
+    "build": "npm run build-client && electron-builder",
+    "build-client": "cd client && npm install && npm run build"
+  },
+  "dependencies": {
+    "express": "^5.1.0",
+    "cors":    "^2.8.5",
+    "pg":      "^8.16.3",
+    "dotenv":  "^17.0.1"
+  },
+  "devDependencies": {
+    "electron":         "^29.4.6",
+    "electron-builder": "^24.13.3"
+  },
+  "build": {
+    "asar": false,
+    "files": [
+      "main.js",
+      "preload.js",
+      "client/dist/**/*",
+      "server/**/*"
+    ],
+    "mac": { "target": ["dmg","zip"] },
+    "directories": { "output": "dist" }
   }
+}
