--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,38 @@
 # Node modules
 node_modules/
 
-# Build output
+# Build outputs
 dist/
 .vite/
-build/               # Add this if you're using React or Vite builds
+build/
+client/dist/
+server/dist/
 
-# Electron/PKG output
-partdb-backend.exe   # Executable from pkg
-*.exe                # Optional: ignore all executables
+# Electron + PKG output
+partdb-backend.exe
+*.exe
+out/
+release/
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Environment files
+# Environment
 .env
 
-# OS + Editor junk
+# Editor/OS junk
 .DS_Store
 *.swp
 .vscode/
 
-# Lockfiles (optional based on your package manager)
-package-lock.json
+# ESLint cache
+.eslintcache
+
+# Lockfiles (optional - prefer to keep)
+# package-lock.json
 pnpm-lock.yaml
 
-# Optional: ignore icon if it's generated or temporary
-partDBicon.ico
+# Optional: ignore only if generated
+# partDBicon.ico
