--- a/package.json
+++ b/package.json
@@ -2,31 +2,36 @@
   "name": "partdb",
   "version": "1.0.0",
   "main": "main.js",
-"scripts": {
-  "build-client":  "cd client && npm install && npm run build",
-  "build-backend": "pkg server/index.js --target node18-win-x64 --output build/partdb-backend.exe",
-  "build":         "npm run build-client && npm run build-backend && electron-builder"
-},
+  "scripts": {
+    "build-client": "cd client && npm install && npm run build",
+    "build-backend": "pkg server/index.js --target node18-win-x64 --output build/partdb-backend.exe",
+    "build": "npm run build-client && npm run build-backend && electron-builder"
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.52.1",
-    "axios":             "^1.11.0",
-    "cors":              "^2.8.5",
-    "dotenv":            "^17.0.1",
-    "express":           "^5.1.0",
-    "node-fetch":        "^2.6.7",
-    "pg":                "^8.16.3",
-    "supabase":          "^2.31.8"
+    "axios": "^1.11.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.0.1",
+    "express": "^5.1.0",
+    "node-fetch": "^2.7.0",
+    "pg": "^8.16.3",
+    "supabase": "^2.31.8"
   },
   "devDependencies": {
-    "electron":         "^29.4.6",
+    "electron": "^29.4.6",
     "electron-builder": "^24.13.3",
-    "pkg":              "^5.10.9"
+    "pkg": "^5.8.1"
   },
   "pkg": {
-
-    "scripts":    ["server/index.js"],
-    "assets":     ["server/env.production"],
-    "targets":    ["node18-win-x64"],
+    "scripts": [
+      "server/index.js"
+    ],
+    "assets": [
+      "server/env.production"
+    ],
+    "targets": [
+      "node18-win-x64"
+    ],
     "outputPath": "build"
   },
   "build": {
@@ -39,7 +44,7 @@
     "extraResources": [
       {
         "from": "build/partdb-backend.exe",
-        "to":   "backend/partdb-backend.exe"
+        "to": "backend/partdb-backend.exe"
       }
     ],
     "directories": {
@@ -49,7 +54,9 @@
       "target": [
         {
           "target": "portable",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ],
       "icon": "partDB_icon.ico"
