--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "node-fetch": "^2.7.0",
     "pg": "^8.16.3",
     "supabase": "^2.31.8"
